# radeky_bot

./: LICENSE  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
plugins/: __init__.py
plugins/pusher/: dynamic_live_pusher.py
plugins/setu/: setu_v1.py
plugins/user_operator/: bind.py  refresh.py  set.py
src/plugins/radeky_bot/: __init__.py
src/plugins/radeky_bot/plugins/: __init__.py
src/plugins/radeky_bot/plugins/announce/: __init__.py  announce.py
src/plugins/radeky_bot/plugins/pusher/: __init__.py  dynamic_live_pusher.py  dynamic_pusher.py  live_pusher.py  video_uploader.py
src/plugins/radeky_bot/plugins/setu/: __init__.py  setu_v1.py
src/plugins/radeky_bot/plugins/tools/: __init__.py  auto_join.py  dm.py  dm_console.py  get_user_info.py  help.py  initialize.py  ws_monitor.py
src/plugins/radeky_bot/plugins/user_operator/: __init__.py  adduid.py  bind.py  checklist.py  deluid.py  refresh.py  set.py  setuser.py
src/plugins/radeky_bot/utils/: __init__.py  get_user_info.py  initialize.py  read_file.py  refresh.py  sender.py  webhook.py  write_file.py
src/plugins/radeky_bot/utils/bilibiliuploader/: BiliAuth.py  __init__.py  bilibiliuploader.py  core.py
src/plugins/radeky_bot/utils/bilibiliuploader/script/: videotypehelper.py
utils/: __init__.py  refresh.py
